tests/cases/standard-library/ok/std-vec-iter.ari
fn main() -> i64 {
  var zone = zone::create(128);
  var vec = std::vec::new<i64>(ref mut zone, 2);
  vec.push(3);
  vec.push(4);
  vec.push_in(ref mut zone, 5);

  var cursor = vec.iter();
  let first = match cursor.next() {
    std::Some(value) => value,
    std::None => 0,
  };
  let second = match cursor.next() {
    std::Some(next_value) => next_value,
    std::None => 0,
  };

  var by_iter = 0;
  for iter_value in vec.iter() {
    by_iter = by_iter + iter_value;
  }

  var by_vec = 0;
  for vec_value in vec {
    by_vec = by_vec + vec_value;
  }

  zone::destroy(zone);
  return first + second + by_iter + by_vec;
}
